--- a/MedManager/Views/Medications/Add.cshtml
+++ b/MedManager/Views/Medications/Add.cshtml
@@ -1,18 +1,18 @@
-﻿@model MedManager.Models.Medication
+﻿@model MedManager.ViewModels.AddMedViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Add A Medication</h2>
 
-<h4>Medication</h4>
+<h4>New Medication</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Add">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="None" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -38,11 +38,7 @@
                 <input asp-for="RefillRate" class="form-control" />
                 <span asp-validation-for="RefillRate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
