--- a/MedManager/Views/Medications/Delete.cshtml
+++ b/MedManager/Views/Medications/Delete.cshtml
@@ -1,58 +1,24 @@
-﻿@model MedManager.Models.Medication
-
-@{
+﻿@{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Remove Medications</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Medication</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Dosage)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Dosage)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.TimesXDay)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.TimesXDay)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.RefillRate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.RefillRate)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UserID)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserID)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<form method="post">
+
+    @foreach (var item in ViewBag.meds)
+    {
+        <input type="checkbox" name="medIds" id="@item.ID" value="@item.ID" />
+        <label for="@item.ID">@item.Name</label>
+        <br />
+    }
+
+    <input type="submit" value="Remove Selected Medication(s)" />
+</form>
+
+@if (ViewBag.meds.Count == 0)
+{
+    <p>There are no medications to remove at this time.</p>
+
+}
