--- a/MedManager/Views/Medications/Index.cshtml
+++ b/MedManager/Views/Medications/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<MedManager.Models.Medication>
+﻿@model IList<Medication>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Medication Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,28 +10,36 @@
 <p>
     <a asp-action="Add">Create New Medication</a>
 </p>
+
+@if (Model.Count == 0)
+{
+    <p>No Medications Yet!</p>
+
+} else
+{
+
+
+}
+
 <table class="table">
     <thead>
         <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Name)
+                    Medication
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Dosage)
+                    Dosage
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Notes)
+                    Notes
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.TimesXDay)
+                    Times Taken / Day
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RefillRate)
+                    # of Doses / Bottle
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.UserID)
-                </th>
-            <th></th>
+                <th></th>
         </tr>
     </thead>
     <tbody>
@@ -51,9 +59,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RefillRate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
