--- a/MedManager/Views/Medications/Index.cshtml
+++ b/MedManager/Views/Medications/Index.cshtml
@@ -62,10 +62,11 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+<p><a asp-controller="Medications" asp-action="Remove">Remove Medications</a></p>
