--- a/MedManager/Views/Shared/_Layout.cshtml
+++ b/MedManager/Views/Shared/_Layout.cshtml
@@ -26,11 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MedManager</a>
+                <a asp-area="" asp-controller="Medications" asp-action="Index" class="navbar-brand">MedManager</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Medications" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Medications" asp-action="Add">Add</a></li>
+                    <li><a href="#"> </a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
