Add ViewAll Action and View, corrected Menu, removed extra headings

--- a/MedManager/Views/Shared/_Layout.cshtml
+++ b/MedManager/Views/Shared/_Layout.cshtml
@@ -32,7 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Medications" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Medications" asp-action="Add">Add</a></li>
-                    <li><a href="#"> </a></li>
+                    <li><a asp-area="" asp-controller="Medications" asp-action="ViewAll">View All Meds</a></li>
+                    <li>   </li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
