Added some styling

--- a/MedManager/Views/Medications/Add.cshtml
+++ b/MedManager/Views/Medications/Add.cshtml
@@ -39,7 +39,7 @@
                 <span asp-validation-for="RefillRate" class="text-danger"></span>
             </div>
             
-            <div class="form-group">
+            <div id="center" class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
