--- a/MedManager/Views/Medications/Index.cshtml
+++ b/MedManager/Views/Medications/Index.cshtml
@@ -7,15 +7,12 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Add">Create New Medication</a>
-</p>
-
 @if (Model.Count == 0)
 {
     <p>No Medications Yet!</p>
 
-} else
+}
+else
 {
 
 
@@ -24,49 +21,55 @@
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    Medication
-                </th>
-                <th>
-                    Dosage
-                </th>
-                <th>
-                    Notes
-                </th>
-                <th>
-                    Times Taken / Day
-                </th>
-                <th>
-                    # of Doses / Bottle
-                </th>
-                <th></th>
+            <th>
+                Medication
+            </th>
+            <th>
+                Dosage
+            </th>
+            <th>
+                Notes
+            </th>
+            <th>
+                Times Taken / Day
+            </th>
+            <th>
+                # of Doses / Bottle
+            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dosage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Notes)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimesXDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RefillRate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Dosage)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Notes)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TimesXDay)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RefillRate)
+                </td>
+                <td>
+                    <div class="btn-group" role="group" aria-label="Edit or Delete">
+                        <button type="button" class="btn btn-default" asp-action="Edit" asp-route-id="@item.ID">Edit</button>
+                        <button type="button" class="btn btn-default" asp-action="Details" asp-route-id="@item.ID">Details</button>
+                    </div>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
-<p><a asp-controller="Medications" asp-action="Remove">Remove Medications</a></p>
+<div id="center" class="btn-group" role="group" aria-label="Add or Remove">
+    <button type="button" class="btn btn-primary" asp-controller="Medications" asp-action="Add">Create New Medication</button>
+    <button type="button" class="btn btn-danger" asp-controller="Medications" asp-action="Remove">Remove Medications</button>
+</div>
